# pycon26-track1

./: Makefile  README.md
pycon26/: .gitignore  AGENTS.md  README.md
pycon26/apps/backend/: .env.example  README.md  pyproject.toml
pycon26/apps/backend/app/: api_logging.py  config.py  db.py  dependencies.py  main.py  models.py  security.py
pycon26/apps/backend/app/clients/: local_llm.py  vector_db.py
pycon26/apps/backend/app/repositories/: roles.py  users.py
pycon26/apps/backend/app/routers/: auth.py  learner.py  roles.py  users.py  vectors.py
pycon26/apps/backend/app/schemas/: learner.py  roles.py  users.py  vectors.py
pycon26/apps/backend/app/services/: career_pathway.py  learner_analysis.py  resume_profile.py
pycon26/apps/backend/scripts/: join_skills_framework_workbook.py
pycon26/apps/backend/tests/: test_auth.py  test_health.py  test_learner_analysis.py  test_local_llm_client.py  test_resume_profile.py  test_roles.py  test_users.py  test_vector_db_client.py  test_vectors.py
pycon26/apps/frontend/: middleware.ts  package.json  pnpm-lock.yaml
pycon26/apps/frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  styles.ts
pycon26/apps/frontend/app/dashboard/: dashboard-tabs.tsx  learner-intake.tsx  logout-button.tsx  page.tsx  pathway-generator.tsx  theme-toggle.tsx  (+1 more)
pycon26/apps/frontend/lib/: auth.ts
pycon26/docs/: architecture-c4.md  bring-up.md  data-provenance.md  interaction-logs.md  openapi.json  uml-diagrams.md
pycon26/docs/snapshots/: README.md  capture-flow.mjs
pycon26/docs/videos/: skillcompass-flow.webm
(+11 files in other folders)
